# tutor-plataform

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 20260706_01_create_tutor_domain_tables.py  20260707_01_add_tutor_embed_token.py  3dc8360861ee_create_tutor_and_knowledge_source_models.py
app/: main.py
app/agents/: __init__.py  tutor_agent.py
app/api/: __init__.py  dependencies.py  errors.py  schemas.py
app/api/v1/: __init__.py  admin.py  chat.py  embed.py
app/core/: config.py  database.py  exceptions.py  security.py
app/db/: __init__.py  base.py  session.py  uow.py
app/knowledge/: __init__.py  exceptions.py  factory.py  interfaces.py  models.py
app/knowledge/providers/: __init__.py  http_provider.py  json_provider.py  tavily_provider.py
app/llm/: __init__.py  client.py
app/models/: __init__.py  conversation.py  enums.py  knowledge_source.py  message.py  tutor.py
app/prompts/: __init__.py  tutor_prompt.py
app/repositories/: __init__.py  conversation_repository.py  knowledge_repository.py  message_repository.py  tutor_repository.py
app/services/: __init__.py  chat_service.py  knowledge_service.py  tutor_service.py
app/tools/: __init__.py  knowledge_tool.py
docs/: architecture-decisions.md
tests/: conftest.py  test_admin_api.py  test_chat_api.py  test_knowledge_validation.py  test_tutor_repository.py
